This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-Jan-2004 (Lars Duening)  (3.3.652)
  - (mapping.c) Indexing a 0-width mapping returned pointers to memory outside
       the mapping, causing weird crashes. The solution is to return pointers
       to the global const1 (when found), or to a local svalue-0 instance
       (when not found and a lvalue is requested) (Bug #0000341).

10-Jan-2004 (Lars Duening)  (3.3.651)
  - (configure) Added yet another path to the search for a mySQL installation.

09-Jan-2004 (Lars Duening)  (3.3.650)
  - (doc/efun/send_udp) Added a note about the blocking behaviour of 
       name lookups.
  - (configure) The mySQL test was not quite correct.

09-Jan-2004 (Lars Duening)  (3.3.649)
  - (configure) Added another path to the search for a mySQL installation.

08-Jan-2004 (Lars Duening)  (3.3.648)
  - (settings/timewarp) New settings file.
  - (mudlib/sys/files.h, files.c) Efun get_dir() can now return
        access times and file modes (suggested by Mats).

08-Jan-2004 (Lars Duening)  (3.3.647)
  - (configure, pkg-mysql.c) Adjusted the search for the mySQL include
        files to allow for local installations (Bug #0000338)

08-Jan-2004 (Lars Duening)  (3.3.646)
  - (func_spec, lex, prolang.y, interpret.c) New pragma 'range_check'
        allows to check the validity of array ranges at runtime - these
        are the range checks currently controlled by the warn_deprecated
        pragma.

08-Jan-2004 (Lars Duening)  (3.3.645)
  - (smalloc.c) Corrected some bugs in the extended statistics.
  - (comm, simulate.c, mudlib/sys/debug_info.h) Added statistics for
        the incoming network traffic, and also display the total
        amount of data sent/received in the 'status tables' command.

04-Jan-2004 (Lars Duening)  (3.3.644)
  - (main.c, doc/driver/invocation, INSTALL) Corrected the documentation
        (Bugs #0000333 and #0000335).
